# NSC

./: .gitattributes  .gitignore  Agents.md  CLAUDE.md  README.md  dev.ps1
.agents/: skills.json
App_Design/: .thumbnail  SignMind Scanner.dc.html
App_Design/uploads/: proposal.txt
Backend/: AGENTS.md  go.mod  go.sum
Backend/cmd/server/: main.go
Backend/internal/admin/: handler.go  handler_test.go  sync.go
Backend/internal/auth/: handler.go  handler_test.go  jwt.go  middleware.go  store.go  store_test.go
Backend/webui/: next.config.mjs  package-lock.json  package.json
Backend/webui/app/: page.tsx  (+2 more)
Frontend/: .metadata  AGENTS.md  README.md  pubspec.yaml  shorebird.yaml
Frontend/lib/: main.dart
Inference_backend/: AGENTS.md  extract_keypoints.py  pyproject.toml  pyrightconfig.json  tsl_live_inference.py  tsl_preprocess.py
Inference_backend/TSL_Output/: README.md  active_model.json  tsl_lstm_f32.tflite
Inference_backend/TSL_Output/uploads/20260711T175138360766Z/: label_map.json  preprocess_config.json
Inference_backend/TSL_Output/uploads/20260711T175317857561Z/: label_map.json  tsl_lstm_f32.tflite
Inference_backend/inference/: __init__.py  engine.py  logstream.py  server.py
Inference_backend/inference/pb/: __init__.py  tsl_inference_pb2.py  tsl_inference_pb2.pyi  tsl_inference_pb2_grpc.py
Inference_backend/tests/: fakes.py  test_engine.py  test_extract_keypoints.py  test_preprocess.py  test_server.py
docs/: AGENTS.md  STATE.md
docs/api/: stream-schema.md  tsl_inference.proto
docs/plans/: framerate-resample-fix.md  sign-avatar-pipeline.md
(+95 files in other folders)
